Updated About and Contact pages

--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - Best Cars Dealership</title>
+  <title>Contact Us - Best Cars Dealership</title>
   <link rel="stylesheet" href="/static/style.css">
   <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
@@ -21,10 +21,10 @@
               <a class="nav-link" style="font-size: larger;" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" style="font-size: larger;" href="/about">About Us</a>
+              <a class="nav-link" style="font-size: larger;" href="/about">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="font-size: larger;" href="/contact">Contact Us</a>
+              <a class="nav-link active" style="font-size: larger;" href="/contact">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -32,38 +32,36 @@
     </nav>
     
     <div class="card" style="width: 80%; margin: auto; margin-top: 5%;">
-      <div class="banner" name="about-header">
-        <h1>About Us</h1>
-        <p>Welcome to Best Cars dealership, home to the finest vehicles in North America. We specialize in the sale of both domestic and imported cars at competitive prices. Our mission is to provide top-quality cars and exceptional customer service to our valued clients.</p>
+      <div class="banner" name="contact-header">
+        <h1>Contact Us</h1>
+        <p>We are here to help you with all your automotive needs. Please reach out to us through any of the following methods:</p>
       </div>
       <div style="display: flex; flex-direction: row; margin: auto;">
         <div class="card" style="width: 30%; margin: 1%;">
-          <img class="card-img-top" src="/static/persona_car.jpeg" alt="Card image">
           <div class="card-body">
-            <p class="title">John Doe</p>
-            <p>Chief Executive Officer</p>
-            <p class="card-text">John has over 20 years of experience in the automotive industry, leading teams to achieve excellence in customer service and sales.</p>
-            <p>johndoe@example.com</p>
+            <h3>Head Office</h3>
+            <p>1234 Main Street</p>
+            <p>Springfield, USA</p>
+            <p>Email: info@bestcars.com</p>
+            <p>Phone: (555) 123-4567</p>
           </div>
         </div>
 
         <div class="card" style="width: 30%; margin: 1%;">
-          <img class="card-img-top" src="/static/person.png" alt="Card image">
           <div class="card-body">
-            <p class="title">Jane Smith</p>
-            <p>Head of Sales</p>
-            <p class="card-text">Jane is passionate about connecting customers with their dream cars and has a keen eye for market trends and customer preferences.</p>
-            <p>janesmith@example.com</p>
+            <h3>Support</h3>
+            <p>Email: support@bestcars.com</p>
+            <p>Phone: (555) 234-5678</p>
+            <p>Hours: Mon-Fri, 9am - 6pm</p>
           </div>
         </div>
 
         <div class="card" style="width: 30%; margin: 1%;">
-          <img class="card-img-top" src="/static/person.png" alt="Card image">
           <div class="card-body">
-            <p class="title">Michael Johnson</p>
-            <p>Service Manager</p>
-            <p class="card-text">Michael ensures that every vehicle sold is in top condition and that our service department runs smoothly and efficiently.</p>
-            <p>michaeljohnson@example.com</p>
+            <h3>Sales</h3>
+            <p>Email: sales@bestcars.com</p>
+            <p>Phone: (555) 345-6789</p>
+            <p>Hours: Mon-Sat, 10am - 8pm</p>
           </div>
         </div>
       </div>
